--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="number_per_sec">
                     <div class="minus_per_sec"><i class="fas fa-minus"></i></div>
                     <div class="plus_per_sec"><i class="fas fa-plus"></i></div>
-                    <div class="info_per_sec">0,5</div><span>per/sec</span>
+                    <div class="info_per_sec">0,5</div><span>sec</span>
                 </div>
                 <div class="gravity_value">
                     <div class="minus_grav"><i class="fas fa-minus"></i></div>
